# BinaryAnalysis

./: CMakeLists.txt  basic_capstone.cpp  basic_capstone_recursive.cc  loader.cc
cmake/: FindCAPSTONE.cmake  FindUNICORN.cmake
loader/: loader.h
pin/: profiler.cpp
synthesizer/: CMakeLists.txt  Game.cpp  Game.h  Grammar.cpp  Grammar.h  MCTS.cpp  MCTS.h  UnicornEngine.cpp  UnicornEngine.h  main.cpp
